--- a/style.css
+++ b/style.css
@@ -24,14 +24,14 @@ h1 {
 h2 {
   text-align: center;
   font-family: "Papyrus";
-  color: crimson;
-  pa
+  color: linen;
+  font-size: 120%
 }
 
 h3 {
   text-align: center;
   font-family: "helvetica";
-  color: linen
+  color: linen;
 }
 
 p {
